--- a/templates/snake.html
+++ b/templates/snake.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>貪吃蛇遊戲</title>
-    <link rel="stylesheet" href="../static/snake.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='snake.css') }}">
 </head>
 <body>
 
@@ -12,11 +12,11 @@
 
     <div class="info">
         <div>分數：<span id="score">0</span></div>
-        <button onclick="location.href='index.html'">返回首頁</button>
+        <button onclick="location.href='/lobby'">返回大廳</button>
     </div>
 
     <canvas id="gameCanvas" width="400" height="400"></canvas>
 
-    <script src="../static/snake.js"></script>
+    <script src="{{ url_for('static', filename='snake.js') }}"></script>
 </body>
 </html>
