--- a/templates/memory.html
+++ b/templates/memory.html
@@ -54,19 +54,21 @@
 <body>
 
     <div class="user-menu">
-        <div class="avatar-btn">
-            {% if user.avatar == 'default.png' %}
-                <img src="https://ui-avatars.com/api/?name={{ user.username }}&background=random" alt="User">
-            {% else %}
-                <img src="{{ url_for('static', filename='uploads/' + user.avatar) }}" alt="User">
-            {% endif %}
-        </div>
-        <div class="dropdown-content">
-            <div style="padding: 10px; background: #ffd84d; font-weight: bold; text-align: center;">
-                {{ user.username }}
+        <div class="user-profile-btn" onclick="location.href='/profile'">
+            <div class="avatar-display">
+                {% if user.avatar == 'default.png' %}
+                    <img src="https://ui-avatars.com/api/?name={{ user.username }}&background=0f172a&color=fff" alt="User Avatar">
+                {% else %}
+                    <img src="{{ url_for('static', filename='uploads/' + user.avatar) }}" alt="User Avatar">
+                {% endif %}
             </div>
+            <span class="username-display">{{ user.username }}</span>
+        </div>
+        
+        <div class="dropdown-content">
+            <div>Hi, {{ user.username }}</div>
             <a href="/profile">⚙️ 設定與頭貼</a>
-            <a href="/logout" style="color: red;">🚪 登出</a>
+            <a href="/logout" style="color: #ef4444;">🚪 登出系統</a>
         </div>
     </div>
 
