變更dino遊戲機制及按鈕文字以符合遊戲主題

--- a/templates/snake.html
+++ b/templates/snake.html
@@ -29,7 +29,7 @@
         <div class="info-bar">
             <div class="score-box">SCORE: <span id="score">0</span></div>
             <button class="btn-lobby" onclick="location.href='/lobby'">
-                <i class="fa-solid fa-house"></i> Lobby
+                <i class="fa-solid fa-house"></i> 
             </button>
         </div>
 
