更改snake選染方式與邏輯更新方式

--- a/templates/snake.html
+++ b/templates/snake.html
@@ -23,13 +23,13 @@
         </div>
     </div>
 
-    <h1 class="title">SNAKE GAME</h1>
+    <h1 class="title">NEON SNAKE</h1>
 
     <div class="game-container">
         <div class="info-bar">
             <div class="score-box">SCORE: <span id="score">0</span></div>
             <button class="btn-lobby" onclick="location.href='/lobby'">
-                <i class="fa-solid fa-house"></i> 
+                <i class="fa-solid fa-house"></i> Lobby
             </button>
         </div>
 
