--- a/templates/shaft.html
+++ b/templates/shaft.html
@@ -28,6 +28,11 @@
     <div class="game-container">
         <div class="info-bar">
             <div class="score-box">DEPTH: <span id="depth">0</span> m</div>
+                
+            <div class="action-buttons">
+                <button id="startBtn" class="btn-primary">START MISSION</button>
+            </div>
+        
             <div class="score-box" style="color: #4ade80;">HP: <span id="hp">100</span>%</div>
         </div>
 
